--- a/lounge.html
+++ b/lounge.html
@@ -7,6 +7,45 @@
   </head>
   <body>
     <p><img src="images/logo.gif" alt="Head First Lounge" /></p>
+    <div id="elixir">
+      <h2>Weekly Elixir Specials</h2>
+      <p>
+        <img src="images/yellow.gif" alt="Lemon Breeze Elixir" />
+      </p>
+      <h3>Lemon Breeze</h3>
+      <p>
+        The ultimate healthy drink, this elixir combines herbal botanicals,
+        minerals, and vitamins with a twist of lemon into a smooth citrus wonder
+        that will keep your immune system going all day and all night.
+      </p>
+
+      <p>
+        <img src="images/chai.gif" alt="Chai Chiller Elixir" />
+      </p>
+      <h3>Chai Chiller</h3>
+      <p>
+        Not your traditional chai, this elixir mixes mat&eacute; with chai
+        spices and adds an extra chocolate kick for a caffeinated taste
+        sensation on ice.
+      </p>
+
+      <p>
+        <img src="images/black.gif" alt="Black Brain Brew Elixir" />
+      </p>
+      <h3>Black Brain Brew</h3>
+      <p>
+        Want to boost your memory? Try our Black Brain Brew elixir, made with
+        black oolong tea and just a touch of espresso. Your brain will thank you
+        for the boost.
+      </p>
+
+      <p>
+        Join us any evening for these and all our other wonderful
+        <a href="beverages/elixir.html" title="Head First Lounge Elixirs"
+          >elixirs</a
+        >
+      </p>
+    </div>
     <h1>Welcome to the Head First Lounge</h1>
     <p>
       The Head First Lounge is, no doubt, the biggest trendsetter in Webville.
@@ -54,45 +93,7 @@
       to get you here in record time. No reservations necessary; come and join
       us anytime.
     </p>
-    <div id="elixir">
-      <h2>Weekly Elixir Specials</h2>
-      <p>
-        <img src="images/yellow.gif" alt="Lemon Breeze Elixir" />
-      </p>
-      <h3>Lemon Breeze</h3>
-      <p>
-        The ultimate healthy drink, this elixir combines herbal botanicals,
-        minerals, and vitamins with a twist of lemon into a smooth citrus wonder
-        that will keep your immune system going all day and all night.
-      </p>
-
-      <p>
-        <img src="images/chai.gif" alt="Chai Chiller Elixir" />
-      </p>
-      <h3>Chai Chiller</h3>
-      <p>
-        Not your traditional chai, this elixir mixes mat&eacute; with chai
-        spices and adds an extra chocolate kick for a caffeinated taste
-        sensation on ice.
-      </p>
-
-      <p>
-        <img src="images/black.gif" alt="Black Brain Brew Elixir" />
-      </p>
-      <h3>Black Brain Brew</h3>
-      <p>
-        Want to boost your memory? Try our Black Brain Brew elixir, made with
-        black oolong tea and just a touch of espresso. Your brain will thank you
-        for the boost.
-      </p>
-
-      <p>
-        Join us any evening for these and all our other wonderful
-        <a href="beverages/elixir.html" title="Head First Lounge Elixirs"
-          >elixirs</a
-        >
-      </p>
-    </div>
+    
     <h2>What's playing at the Lounge</h2>
     <p>
       We're frequently asked about the music we play at the lounge, and no
@@ -107,6 +108,8 @@
       <li><span class="cd">Music for Airports</span>,<span class="artist">Brian Eno</span></li>
     </ul>
     <div>
+      <h1 class="blueberry">Чудо-напиток из голубики</h1>
+
       <p id="footer">
         &copy; 2012, Head First Lounge<br />
         All trademarks and registered trademarks appearing on this site are the
@@ -115,3 +118,15 @@
     </div>
   </body>
 </html>
+
+
+
+1 - 011
+2 - 001
+3 - 011               
+4 - 001
+5 - 011
+6 - 001
+7 - 011
+8 - 011
+9
