--- a/lounge.html
+++ b/lounge.html
@@ -110,23 +110,12 @@
     <div>
       <h1 class="blueberry">Чудо-напиток из голубики</h1>
 
-      <p id="footer">
+      <small id="footer">
         &copy; 2012, Head First Lounge<br />
         All trademarks and registered trademarks appearing on this site are the
         property of their respective owners.
-      </p>
+      </small>
     </div>
   </body>
 </html>
 
-
-
-1 - 011
-2 - 001
-3 - 011               
-4 - 001
-5 - 011
-6 - 001
-7 - 011
-8 - 011
-9
